force-app/main/default/objects/Archive_Field__c/Archive_Field__c.object-meta.xml
<CustomObject>
    <description>A source field selected for archiving under a parent Archive Config. The set of these records drives the dynamic SOQL and the JSON archive payload.</description>
    <label>Archive Field</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Archive Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>