force-app/main/default/objects/Archive_Field__c/fields/Archive_Config__c.field-meta.xml
<CustomField>
    <fullName>Archive_Config__c</fullName>
    <description>Parent Archive Config that owns this archive field selection.</description>
    <label>Archive Config</label>
    <referenceTo>Archive_Config__c</referenceTo>
    <relationshipLabel>Archive Fields</relationshipLabel>
    <relationshipName>Archive_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>