force-app/main/default/objects/Archive_Field__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Friendly label of the source field, captured at configuration time.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>