force-app/main/default/objects/Archive_Field__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Salesforce display type of the source field (e.g. STRING, DATETIME, CURRENCY). Drives dynamic rendering in the archived record viewer.</description>
    <label>Field Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>