force-app/main/default/objects/Archive_Field__c/fields/Is_List_View__c.field-meta.xml
<CustomField>
    <fullName>Is_List_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true this archived field is surfaced as a column in the generated Big Object list view and is materialized as its own physical Big Object field. Restricted to non long text area, non lookup fields.</description>
    <label>List View</label>
    <type>Checkbox</type>
</CustomField>